--- a/Taasky/style.css
+++ b/Taasky/style.css
@@ -1,7 +1,7 @@
 * { margin:20; padding:50; box-sizing:border-box; }
 
 body {
-  background: url(assets/background.jpg);
+  background: url(Assets/background.jpg);
   background-size: cover
   background-repeat: no-repeat;
   color: white;
