--- a/Taasky/style.css
+++ b/Taasky/style.css
@@ -1,9 +1,8 @@
 * { margin:0; padding:0; box-sizing:border-box; }
 
 body {
-  background: url(Assets/background.jpg);
-  background-size: cover;
-  background-repeat: no-repeat;
+  background: url(Assets/stripes.png) repeat-x, url(Assets/background.jpg) no-repeat #525a6a;
+  background-size: auto, cover;
   color: #fff;
   font-family: helvetica, arial, sans-serif;
   font-size: 20px;
