--- a/Restaurant/style.css
+++ b/Restaurant/style.css
@@ -2,14 +2,15 @@
 
 body {
   background: url(assets/backgroundphoto.jpg) no-repeat #7F0227;
-  background-size: auto, cover;
+  background-size: cover;
   color: #fff;
   font-family: 'Raleway', sans-serif;
   font-size: 20px;
 
 }
 section {
-  margin:50px 500px 50px 500px;
+  margin:50px auto 50px auto;
+  width:903px;
 }
 hr {
   border-color: #7F0227;
@@ -17,9 +18,16 @@ hr {
   width: 350px;
 }
 h2 {
-    text-align: center;
+  text-align: center;
+  font-weight:600;
 }
-p { color: #7F0227;
-margin: 0 0 30px 0;
-text-align: center;
+p { 
+  color: #7F0227;
+  margin: 0 0 30px 0;
+  text-align: center;
+  font-weight:400;
+}
+img {
+  display:block;
+  margin:0 auto;
 }
