--- a/Restaurant/style.css
+++ b/Restaurant/style.css
@@ -9,8 +9,11 @@ body {
 
 }
 section {
-  margin:50px auto 50px auto;
-  width:903px;
+  margin:50px auto;
+}
+div {
+  background:rgba(255,255,255,.8);
+  padding:20px;
 }
 hr {
   border-color: #7F0227;
@@ -23,9 +26,10 @@ h2 {
 }
 p { 
   color: #7F0227;
-  margin: 0 0 30px 0;
+  margin: 0 auto 30px auto;
   text-align: center;
   font-weight:400;
+  width:903px;
 }
 img {
   display:block;
